--- a/src/assets/css/mycss.css
+++ b/src/assets/css/mycss.css
@@ -122,3 +122,8 @@ a {
 .carousel-indicators .active {
     background-color: #d34127; /* Màu của nút đang chọn */
 }
+
+.swal2-title:after {
+    content: none;
+    /* background-color:transparent !important; */
+}
